vertualcloud.tf
provider "aws" {
    region = "us-east-1"
  
}
 resource "aws_vpc" "my_vpc" {
    cidr_block           = "196.165.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name = "my_vpc"
    } 
}
 resource "aws_subnet" "my_subnet" {
    vpc_id                  = aws_vpc.my_vpc.id
    cidr_block              = "196.165.1.0/24"
    availability_zone       = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
        Name = "my_subnet"
    }
 }  

 resource "aws_internet_gateway" "my_igw" {
    vpc_id = aws_vpc.my_vpc.id

    tags = {
        Name = "my_igw"
    }   

 }  
resource "aws_route_table" "my_route_table" {
        vpc_id = aws_vpc.my_vpc.id  

        tags = {
            Name = "my_route_table"
        }
}
        resource "aws_route" "my_route" {
            route_table_id         = aws_route_table.my_route_table.id
            destination_cidr_block = "0.0.0.0/0"
            gateway_id             = aws_internet_gateway.my_igw.id
        } 

resource "aws_route_table_association" "my_route_table_association" {
    subnet_id      = aws_subnet.my_subnet.id
    route_table_id = aws_route_table.my_route_table.id
}
